template layout fixes; interaction mobile fixed;

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ a:hover {
         font-size: 1vw;
     }
     h1 {
-        font-size: 3.4em;
+        font-size: 34px;
     }
 
     h4 {
