--- a/src/styles/interaction/common.css
+++ b/src/styles/interaction/common.css
@@ -38,7 +38,6 @@
 }
 
 .interaction__card-icon {
-    width: 45px;
     margin-bottom: 5px;
 }
 
