--- a/src/styles/interaction/mobile.css
+++ b/src/styles/interaction/mobile.css
@@ -1,13 +1,51 @@
 @media only screen and (--mobile-viewport) {
-    #interaction {
-        height: 160vw;
-        min-height: 465px;
+    .interaction__container {
+        width: 320px;
     }
 
     .interaction__card-item {
-        width: 24.8vw;
-        height: 24.8vw;
-        padding: 5px;
+        width: 40px;
+        height: 40px;
+        padding: 2px;
+
+        border-radius: 2px;
+    }
+
+    .interaction__template-layout__info-header {
+        padding-bottom: 11px;
+    }
+
+    .interaction__template-layout__info-header__title {
+        margin-bottom: 5px;
+
+        font-size: 9px;
+    }
+
+    .interaction__template-layout__info-header__subtitle {
+        letter-spacing: 0.25px;
+
+        font-size: 6.4px;
+    }
+
+    .interaction__card-content {
+        padding: 0;
+    }
+
+    .interaction__template-layout__info-content {
+        font-size: 5px;
+    }
+
+    .interaction__template-layout__info-content-paragraph {
+        display: inline;
+
+        letter-spacing: 0.2px;
+
+        line-height: 7px;
+    }
+
+    .interaction__template-layout__graphical-info {
+        width: 100%;
+        padding: 14px 22px 10px;
     }
 
     #ask {
@@ -27,15 +65,14 @@
         right: 26.5vw;
     }
 
-    .interaction__card-icon {
-        left: 5.9vw;
 
+    .interaction__card-icon {
+        width: 16px;
         margin-bottom: 0;
     }
 
     .interaction__card-description {
-        font-size: 3rem;
+        font-size: 5px;
         font-weight: 700;
-        line-height: 4.2rem;
     }
 }
